; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/notepad/extr_dialog.c_HasFileExtension.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/notepad/extr_dialog.c_HasFileExtension.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @HasFileExtension(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @_T(i8 signext 92)
  %6 = call i32* @_tcsrchr(i32* %4, i32 %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  store i32* %10, i32** %2, align 8
  br label %11

11:                                               ; preds = %9, %1
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @_T(i8 signext 46)
  %14 = call i32* @_tcsrchr(i32* %12, i32 %13)
  %15 = icmp ne i32* %14, null
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local i32* @_tcsrchr(i32*, i32) #1

declare dso_local i32 @_T(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
